feat(clinics): implement clinics microservice with CRUD operations
- Add Dockerfile for development and production environments.
- Create ClinicRepository for database interactions.
- Implement ClinicsController for handling clinic-related requests.
- Develop ClinicsService for business logic and Kafka integration.
- Define Clinic and Doctor entities with relationships.
- Set up TypeORM for PostgreSQL database connection.
- Add DTOs for clinic data transfer.
- Create events for clinic addition and handle them appropriately.
- Configure Kubernetes deployment for clinics microservice.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,18 +19,31 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     depends_on:
       - zookeeper
+
   api-gateway:
     build:
       context: .
       dockerfile: ./apps/api-gateway/Dockerfile
       target: development
     command: pnpm run start:dev api-gateway
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./apps/api-gateway/src
+          target: /usr/src/app/apps/api-gateway/src
+          ignore:
+            - node_modules/
+        - action: sync+restart
+          path: ./libs
+          target: /usr/src/app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
     env_file:
       - ./apps/api-gateway/.env
     ports:
       - '3000:3000'
-    volumes:
-      - .:/usr/src/app
 
   reservations:
     build:
@@ -38,10 +51,22 @@ services:
       dockerfile: ./apps/reservations/Dockerfile
       target: development
     command: pnpm run start:dev reservations
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./apps/reservations/src
+          target: /usr/src/app/apps/reservations/src
+          ignore:
+            - node_modules/
+        - action: sync+restart
+          path: ./libs
+          target: /usr/src/app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
     env_file:
       - ./apps/reservations/.env
-    volumes:
-      - .:/usr/src/app
 
   auth:
     build:
@@ -49,10 +74,74 @@ services:
       dockerfile: ./apps/auth/Dockerfile
       target: development
     command: pnpm run start:dev auth
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./apps/auth/src
+          target: /usr/src/app/apps/auth/src
+          ignore:
+            - node_modules/
+        - action: sync+restart
+          path: ./libs
+          target: /usr/src/app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
     env_file:
       - ./apps/auth/.env
-    volumes:
-      - .:/usr/src/app
+
+      
+  clinics:
+    build:
+      context: .
+      dockerfile: ./apps/clinics/Dockerfile
+      target: development
+    command: pnpm run start:dev clinics
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./apps/clinics/src
+          target: /usr/src/app/apps/clinics/src
+          ignore:
+            - node_modules/
+        - action: sync+restart
+          path: ./libs
+          target: /usr/src/app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
+    env_file:
+      - ./apps/clinics/.env  
 
   mongo:
     image: mongo
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres_clinics
+
+  postgres_clinics:
+    image: postgres:15
+    container_name: htclinichub-postgres-clinics
+    restart: always
+    environment:
+      POSTGRES_USER: clinics_user
+      POSTGRES_PASSWORD: clinics_pass
+      POSTGRES_DB: clinics_db
+    ports:
+      - "5433:5432"
+    volumes:
+      - clinics_pgdata:/var/lib/postgresql/data
+
+volumes:
+  clinics_pgdata:
+
+  
