feat/return log to db after add-clinic

--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "kafkajs": "^2.2.4",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "nestjs-pino": "^4.4.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.0",
+    "pino": "^9.7.0",
     "pino-http": "^10.4.0",
+    "pino-mongodb": "^4.3.0",
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.7",
     "reflect-metadata": "^0.2.2",
