--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "kafkajs": "^2.2.4",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
+    "nanoid": "^5.1.5",
     "nestjs-pino": "^4.4.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
