feat(docker): add postgres dependency health check for services

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -137,6 +137,8 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
       mongo:
         condition: service_healthy
   auth:
