--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -178,6 +178,8 @@ services:
             - node_modules/
         - action: rebuild
           path: ./package.json
+    ports:
+      - '3003:3003'
     env_file:
       - ./apps/staff/.env
     depends_on:
