refactor ClinicUser entity to User

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,19 +56,19 @@ services:
       timeout: 5s
       retries: 10
 
-  # postgres-test:
-  #   image: postgres
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: randompassword
-  #     POSTGRES_DB: authservice
-  #   ports:
-  #     - '5432:5432'
-  #   healthcheck:
-  #     test: ['CMD', 'pg_isready', '-U', 'postgres']
-  #     interval: 5s
-  #     timeout: 5s
-  #     retries: 10
+  postgres-test:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: randompassword
+      POSTGRES_DB: authservice
+    ports:
+      - '5432:5432'
+    healthcheck:
+      test: ['CMD', 'pg_isready', '-U', 'postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   api-gateway:
     build:
