--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,19 +56,19 @@ services:
       timeout: 5s
       retries: 10
 
-  postgres-test:
-    image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: randompassword
-      POSTGRES_DB: authservice
-    ports:
-      - '5432:5432'
-    healthcheck:
-      test: ['CMD', 'pg_isready', '-U', 'postgres']
-      interval: 5s
-      timeout: 5s
-      retries: 10
+  # postgres-test:
+  #   image: postgres
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: randompassword
+  #     POSTGRES_DB: authservice
+  #   ports:
+  #     - '5432:5432'
+  #   healthcheck:
+  #     test: ['CMD', 'pg_isready', '-U', 'postgres']
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 10
 
   api-gateway:
     build:
@@ -249,3 +249,31 @@ services:
         condition: service_healthy
       mongo:
         condition: service_healthy  
+
+  media:
+    build:
+      context: .
+      dockerfile: ./apps/media/Dockerfile
+      target: development
+    command: sh -c "sleep 10 && pnpm run start:dev media"
+    develop:
+      watch:
+        - action: sync
+          path: ./apps/media/src
+          target: /app/apps/media/src
+          ignore:
+            - node_modules/
+        - action: sync
+          path: ./libs
+          target: /app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
+    env_file:
+      - .env
+    depends_on:
+      kafka:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
