--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -216,3 +216,30 @@ services:
         condition: service_healthy
       mongo:
         condition: service_healthy
+  communication:
+    build:
+      context: .
+      dockerfile: ./apps/communication/Dockerfile
+      target: development
+    command: sh -c "sleep 10 && pnpm run start:dev communication"
+    develop:
+      watch:
+        - action: sync
+          path: ./apps/communication/src
+          target: /app/apps/communication/src
+          ignore:
+            - node_modules/
+        - action: sync
+          path: ./libs
+          target: /app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
+    env_file:
+      - .env
+    ports:
+      - '3004:3003'
+    depends_on:
+      kafka:
+        condition: service_healthy
