--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -295,3 +295,31 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
+
+  payment:
+    build:
+      context: .
+      dockerfile: ./apps/payment/Dockerfile
+      target: development
+    command: sh -c "sleep 10 && pnpm run start:dev payment"
+    develop:
+      watch:
+        - action: sync
+          path: ./apps/payment/src
+          target: /app/apps/payment/src
+          ignore:
+            - node_modules/
+        - action: sync
+          path: ./libs
+          target: /app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
+    env_file:
+      - .env
+    depends_on:
+      kafka:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
