finished payment method for payos

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@payos/node": "^1.0.10",
     "argon2": "^0.43.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -63,6 +64,7 @@
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "kafkajs": "^2.2.4",
+    "moment": "^2.30.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "multer": "^2.0.1",
