--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -293,3 +293,33 @@ services:
     depends_on:
       kafka:
         condition: service_healthy
+
+  chat:
+    build:
+      context: .
+      dockerfile: ./apps/chat/Dockerfile
+      target: development
+    command: sh -c "sleep 10 && pnpm run start:dev chat"
+    develop:
+      watch:
+        - action: sync
+          path: ./apps/chat/src
+          target: /app/apps/chat/src
+          ignore:
+            - node_modules/
+        - action: sync
+          path: ./libs
+          target: /app/libs
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./package.json
+    env_file:
+      - .env
+    ports:
+      - '3002:3002'
+    depends_on:
+      kafka:
+        condition: service_healthy
+      mongo:
+        condition: service_healthy
