--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -88,7 +88,7 @@ services:
     ports:
       - '3000:3000'
 
-  clinics:
+  clinic:
     build:
       context: .
       dockerfile: ./apps/clinics/Dockerfile
