--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "strip-bom-stream": "^5.0.0",
     "swagger-ui-express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
