--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -109,9 +109,7 @@ services:
       - '5433:5432'
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./init-multiple-databases.sh:/docker-entrypoint-initdb.d/init-multiple-databases.sh
-    # volumes:
-    # - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     healthcheck:
       test: ['CMD', 'pg_isready', '-U', 'postgres']
       interval: 5s
